<?xml version="1.0"?>
<package format="2">
  <name>mission_protobuf</name>
  <version>0.0.0</version>
  <description>The mission_protobuf package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zinki@todo.todo">zinki</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>mission_protobuf</build_depend> -->

  <!-- <build_export_depend>mission_protobuf</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
    <!-- <exec_depend>mission_protobuf</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
