<?xml version="1.0"?>
<package format="2">
  <name>mission_ros_msgs</name>
  <version>0.0.0</version>
  <description>The mission_ros_msgs package</description>

  <maintainer email="thi.zinkeng@gmail.com">Thierry Zinkeng</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
